--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
         "web-vitals": "^2.1.0",
         "zlib": "^1.0.5"
     },
+    "resolutions": {
+        "mini-css-extract-plugin": "2.4.7"
+    },
     "scripts": {
         "start": "PORT=8888 react-scripts start",
         "build": "react-scripts build",
