--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 # americas, asia, europe
 REGION=europe
-DATADRAGON_VERSION=11.24.1
+#DATADRAGON_VERSION=11.24.1
+DATADRAGON_VERSION=latest
+LOCALE=en_US
 
 # https://developer.riotgames.com/
 RIOT_API_KEY=RGAPI-xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
