Add monitor command and docker support

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,4 @@ RIOT_API_KEY=RGAPI-xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
 # NAME USED IN UI: SUMMONER NAME@SERVER[, SUMMONER NAME@SERVER];
 USERS="Me: player@euw1, player@eun1; My friend: funny name@eun1"
 
+PORT=8565
